More description polish

--- a/index.html
+++ b/index.html
@@ -264,12 +264,13 @@
                   <h6>About the project</h6>
                     <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with immersive VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying. Our inspirations for the game include old school space-sims such as Wing Commander and Elite Dangerous as well as roguelikes such as FTL.</p>
                   <h6>Contribution</h6>
-                    <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. My contributions include most of the design and implementation for the player UI, as well as the implementation of player controls, weapon mechanics, and physics effects. I also dabbled in the implementation of particle effects and enemy AI.</p>
+                    <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. My contributions include most of the design and implementation for the player UI, as well as the implementation of player controls and  weapon mechanics. I also dabbled in the implementation of special effects and enemy AI.</p>
                   <h6>Accomplishments/Challenges</h6>
-                    <p>As this is my first fully comprehensive indie game project I learned a great deal about game design and teamwork. I also learned more about worldspace UI and developing controls for multiple platforms (keyboard &amp; Vive) simultaneously.<br>One of our greatest design challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the radar system which gives players 360 degree awareness of their surroundings. Through user testing we found that this gyroscopic display tended to greatly reduce motion sickness.
+                    <p>As this is my first fully comprehensive indie game project I learned a great deal about game design and teamwork. I also learned more about worldspace UI and developing controls for multiple devices (keyboard &amp; Vive) simultaneously. The 3D nature of the game taught me a great deal about vector math as well.
+                    <br>One of our greatest design challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the radar system which gives players 360 degree awareness of their surroundings. Through user testing we found this gyroscopic display tended to significantly reduce motion sickness.
                     </p>
                   <h6>What's next?</h6>
-                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris to create an open world for players to explore. We hope to release an alpha version of the game some time in the next year.</p>
+                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris to create a variety of zones for players to explore. We hope to release an alpha version of the game some time in the next year.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/RedDwarf.zip">
                         <h3 class="btn btn-success btn-lg">
@@ -278,16 +279,23 @@
                         </h3>
                     </a>
                     <p>
-                        <i class="fa fa-gamepad"></i> Note: Supports both HTC Vive as well as keyboard/mouse controls.
+                        <i class="fa fa-gamepad"></i>           
+                        Note: Supports both HTC Vive as well as keyboard/mouse controls.
+                        <br>
+                        <a href="files/Red Dwarf - Gameplay Manual.pdf">
+                        View Gameplay Manual
+                        </a> 
                     </p>
-                    <li>Tools:
+                    <li>
+                      <i class="fa fa-wrench"></i> Tools:
                       <strong>
                         <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, HTC Vive</span>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>                        
+                      <i class="fa fa-calendar"></i> Date:
                       <strong>
-                        <span>May 2017</span>
+                        <span>May 2017 - Present</span>
                       </strong>
                     </li>
                   </ul>
@@ -359,7 +367,7 @@
                       </a>
                     </div>
                     <!-- /Carousel -->
-                    <p>Battle Of The Bards was originally created in just 24 hours at the HackPoly 2017 hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
+                    <p>Battle Of The Bards was originally created in just 24 hours at the <a href="https://devpost.com/software/battle-of-the-bards">HackPoly 2017</a> hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
                     <h6>About the project</h6>
                     <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of the spells. </p>
                   <h6>Contribution</h6>
@@ -367,7 +375,7 @@
                   <h6>Accomplishments/Challenges</h6>
                     <p>I was fortunate to be able to work with 2 talented artists for this project. Due to the competition's harsh 24 hour time limit, I learned a great deal about how to coordinate effectively with a multidisciplinary team. I also learned more about implementing player UI, turn based mechanics, and the use of sounds in games.</p>
                   <h6>What's next?</h6>
-                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to release the game as a mobile app to make it easily accessible to as many people as possible.</p>
+                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to rework the game as a mobile app to make it easily accessible to as many people as possible.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/BattleOfTheBards.zip">
                         <h3 class="btn btn-success btn-lg">
@@ -391,12 +399,14 @@
                         </strong>
                     </li>
                     <br>
-                    <li>Tools:
+                    <li>
+                      <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Unity, C#, Visual Studio</span>
+                        <span>Unity, C#, GIT, Visual Studio</span>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>
+                      <i class="fa fa-calendar"></i> Date:
                       <strong>
                         <span>February 2017</span>
                       </strong>
@@ -425,7 +435,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <h2>Elemental Fury</h2>
-                  <h4>BeachHacks 2017</h4>
+                  <h4>BeachHacks - 2017</h4>
                   <hr class="divider-primary">
                   <h4><i class="fa fa-trophy"></i> 3rd Place Overall</h4>	
                   <div id="carousel1" class="carousel slide" role="listbox">
@@ -434,7 +444,7 @@
                             Your browser does not support the video tag.
                       </video>
                   </div>
-                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other players out of the arena, the last player standing is the winner.<br><br>Elemental Fury was originally created in just 36 hours at the BeachHacks 2017 hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.
+                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other players out of the arena, the last player standing is the winner.<br><br>Elemental Fury was originally created in just 36 hours at the <a href="https://devpost.com/software/elemental-showdown">BeachHacks 2017</a> hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.
                   </p>
                     <ul class="list-inline item-details"> 
                     <!--
@@ -460,12 +470,14 @@
                     </li>
                     -->
                     <br>
-                    <li>Tools:
+                    <li>
+                      <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Unity, C#, Visual Studio, SteamVR, VRTK, HTC Vive</span>
+                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, HTC Vive</span>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>
+                      <i class="fa fa-calendar"></i> Date:
                       <strong>
                         <span>April 2017</span>
                       </strong>
@@ -560,12 +572,14 @@
                     <p>
                         <i class="fa fa-exclamation-triangle"></i> Note: Requires an HTC Vive to play.
                     </p>
-                    <li>Tools:
+                    <li>
+                      <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Unity, C#, Visual Studio, SteamVR, VRTK, HTC Vive</span>
+                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, HTC Vive</span>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>
+                      <i class="fa fa-calendar"></i> Date:
                       <strong>
                         <span>September 2016</span>
                       </strong>
@@ -661,12 +675,14 @@
                     </li>
                     -->
                     <br>
-                    <li>Tools:
+                    <li>
+                      <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Unity, C#, Visual Studio</span>
+                        <span>Unity, C#, GIT, Visual Studio</span>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>
+                      <i class="fa fa-calendar"></i> Date:
                       <strong>
                         <span>January 2017</span>
                       </strong>
@@ -748,7 +764,7 @@
                         </h3>
                     </a>
                     <p>
-                        <i class="fa fa-exclamation-triangle"></i> Note: Requires FTL with Slipstream Mod Manager to play.
+                        <i class="fa fa-exclamation-triangle"></i> Note: Requires FTL with <a href="http://subsetgames.com/forum/viewtopic.php?t=17102">Slipstream Mod Manager</a> to play.
                     </p>
                     <li>
                         <i class="fa fa-external-link"></i>
@@ -757,12 +773,14 @@
                         </strong>
                     </li>
                     <br>
-                    <li>Tools:
+                    <li>
+                      <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Java</span>
+                        <span>Java, GIT, Eclipse</span>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>
+                      <i class="fa fa-calendar"></i> Date:
                       <strong>
                         <span>2016</span>
                       </strong>
