New format for contributions

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <h2>Red Dwarf</h2>
                   <h4></h4>
@@ -262,14 +262,22 @@
                       </video>
                   </div>
                   <h6>About the project</h6>
-                    <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with immersive VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying. Our inspirations for the game include old school space-sims such as Wing Commander and Elite Dangerous as well as roguelikes such as FTL.</p>
-                  <h6>Contribution</h6>
-                    <p>I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. My contributions include most of the design and implementation for the player UI, as well as the implementation of player controls and  weapon mechanics. I also dabbled in the implementation of special effects and enemy AI.</p>
-                  <h6>Accomplishments/Challenges</h6>
+                    <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with immersive VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying. Our inspirations for the game include old school space-sims such as Freelancer and Elite Dangerous as well as roguelikes such as FTL.</p>
+                  <h6>Contributions</h6>
+                    I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. <br>My contributions include:
+                    <ul class="center-list">
+                        <li>Semi-newtonian physics based ship controls (keyboard and Vive)</li>
+                        <li>360 degree gyroscopic radar system</li>
+                        <li>Spline based AI pathing</li>
+                        <li>World space UI displays</li>
+                        <li>Missile and laser weapon mechanics</li>
+                        <li>Explosion particle effects</li>
+                    </ul>
+                  <h6>What I Learned</h6>
                     <p>As this is my first fully comprehensive indie game project I learned a great deal about game design and teamwork. I also learned more about worldspace UI and developing controls for multiple devices (keyboard &amp; Vive) simultaneously. The 3D nature of the game taught me a great deal about vector math as well.
                     <br>One of our greatest design challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the radar system which gives players 360 degree awareness of their surroundings. Through user testing we found this gyroscopic display tended to significantly reduce motion sickness.
                     </p>
-                  <h6>What's next?</h6>
+                  <h6>Future Plans</h6>
                     <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris to create a variety of zones for players to explore. We hope to release an alpha version of the game some time in the next year.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/RedDwarf.zip">
@@ -289,7 +297,7 @@
                     <li>
                       <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, HTC Vive</span>
+                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</span>
                       </strong>
                     </li>
                     <li>                        
@@ -319,7 +327,7 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <h2>Battle Of The Bards</h2>
                   <h4>HackPoly - 2017</h4>
@@ -370,11 +378,18 @@
                     <p>Battle Of The Bards was originally created in just 24 hours at the <a href="https://devpost.com/software/battle-of-the-bards">HackPoly 2017</a> hackathon, winning <strong>'Best Game Hack'</strong> and <strong>'2nd Place Overall'</strong> vs 71 competing projects.</p><br> 
                     <h6>About the project</h6>
                     <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of the spells. </p>
-                  <h6>Contribution</h6>
-                    <p>I worked with another engineer and 2 artists to create Battle of the Bards using all original assets. My contributions include most of the design and implementation for the player UI and spell mechanics including the note detection system.</p>
-                  <h6>Accomplishments/Challenges</h6>
+                  <h6>Contributions</h6>
+                    I worked with another engineer and 2 artists to create Battle of the Bards. <br>My contributions include:
+                    <ul class="center-list">
+                        <li>Note detection and music generation system</li>
+                        <li>Spell mechanics for all 3 classes</li>
+                        <li>Player UI and selection system</li>
+                        <li>Turn based health/damage system</li>
+                        <li>Spell particle effects</li>
+                    </ul>
+                  <h6>What I Learned</h6>
                     <p>I was fortunate to be able to work with 2 talented artists for this project. Due to the competition's harsh 24 hour time limit, I learned a great deal about how to coordinate effectively with a multidisciplinary team. I also learned more about implementing player UI, turn based mechanics, and the use of sounds in games.</p>
-                  <h6>What's next?</h6>
+                  <h6>Future Plans</h6>
                     <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to rework the game as a mobile app to make it easily accessible to as many people as possible.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/BattleOfTheBards.zip">
@@ -432,7 +447,7 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <h2>Elemental Fury</h2>
                   <h4>BeachHacks - 2017</h4>
@@ -444,8 +459,19 @@
                             Your browser does not support the video tag.
                       </video>
                   </div>
-                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock other players out of the arena, the last player standing is the winner.<br><br>Elemental Fury was originally created in just 36 hours at the <a href="https://devpost.com/software/elemental-showdown">BeachHacks 2017</a> hackathon, and won <strong>'3rd Place Overall'</strong> vs. 38 competing projects.
-                  </p>
+                  <p>Elemental Fury was originally created in just 36 hours at the <a href="https://devpost.com/software/elemental-showdown">BeachHacks 2017</a> hackathon, winning <strong>'3rd Place Overall'</strong> vs. 38 competing projects.
+                  </p><br> 
+                  <h6>About the project</h6>
+                  <p>Elemental Fury is a multiplayer Virtual Reality game created for the HTC Vive and inspired by the animated series, Avatar. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock opposing players out of the arena, the last player standing is the winner.<br>
+                  <h6>Contributions</h6>
+                    I worked with two others engineers and a 3D artist to create Elemental Fury. <br>My contributions include:
+                    <ul class="center-list">
+                        <li>Local networking between multiple HTC Vive's using the Photon Unity Networking Framework</li>
+                        <li>Player controls for HTC Vive</li>
+                        <li>Earth and water mechanics</li>
+                    </ul>
+                  <h6>What I Learned</h6>
+                    <p>As this was my first networked game I spent most of the hackathon learning about the Photon Networking Framework. By the end of the hackathon I was able to achieve great synchronization between multiple Vive's using the same set of tracking modules. I also learned more about implementing VR player controls as our team designed creative ways to control the various elements in our game.</p>
                     <ul class="list-inline item-details"> 
                     <!--
                     <form action="builds/SeismicShift.zip">
@@ -473,7 +499,7 @@
                     <li>
                       <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, HTC Vive</span>
+                        <span>Unity, C#, Photon Unity Network, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</span>
                       </strong>
                     </li>
                     <li>
@@ -503,7 +529,7 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <h2>InVRasion</h2>
                   <h4>Senior Project</h4>
@@ -575,7 +601,7 @@
                     <li>
                       <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, HTC Vive</span>
+                        <span>Unity, C#, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</span>
                       </strong>
                     </li>
                     <li>
@@ -605,7 +631,7 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <h2>Seismic Shift</h2>
                   <h4>Global Game Jam - 2017</h4>
@@ -708,7 +734,7 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-10 mx-auto">
                 <div class="modal-body">
                   <h2>FTL Captain's Edition</h2>
                   <hr class="divider-primary">
@@ -776,7 +802,7 @@
                     <li>
                       <i class="fa fa-wrench"></i> Tools:
                       <strong>
-                        <span>Java, GIT, Eclipse</span>
+                        <span>Java, GIT, Eclipse, GIMP</span>
                       </strong>
                     </li>
                     <li>
