Added profile picture

--- a/index.html
+++ b/index.html
@@ -150,13 +150,17 @@
         </ul>
         <div class="row">
           <div class="col-lg ml-auto">
-            <p>I'm an avid programmer who has had a passion for game development all my life. My colleagues know me to be a quick learner, friendly, organized, open-minded, and inspired.<br><br>
-            Through my personal projects, I have become proficient with Unity and have experimented extensively with VR development. I have also interned for Blizzard Entertainment, where I became experienced with web engineering and WebGL, and was selected to participate in Google’s Applied CS program, where I learned to develop Android applications.<br><br>
-            I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at HackPoly 2017, as well as winning ‘3rd Place Overall’ at BeachHacks 2017.
-            <br><br>
-            As President of the Game Design &amp; Development Club at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the Student Game Developer Alliance which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.
-            <br><br>
-            I recently graduated from Cal Poly Pomona with a degree in Computer Science and I am currently pursuing a full-time programming position. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!</p>
+            <div>
+              <img src="img/profile.png" class="img-fluid img-profile">
+            </div>
+              <p>I'm an avid programmer who has had a passion for game development all my life. My colleagues know me to be a quick learner, friendly, organized, open-minded, and inspired.<br><br>
+              Through my personal projects, I have become proficient with Unity and have experimented extensively with VR development. I have also interned for Blizzard Entertainment, where I became experienced with web engineering and WebGL, and was selected to participate in Google’s Applied CS program, where I learned to develop Android applications.<br><br>
+              I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at HackPoly 2017, as well as winning ‘3rd Place Overall’ at BeachHacks 2017.
+              <br><br>
+              As President of the Game Design &amp; Development Club at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the Student Game Developer Alliance which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.
+              <br><br>
+              I recently graduated from Cal Poly Pomona with a degree in Computer Science and I am currently pursuing a full-time programming position. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!</p>
+            </div>
           </div>
         </div>
       </div>
