Updated inVRasion description, added links to about

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/BattleOfTheBards/BattleOfTheBards.jpg" class="img-fluid" alt="Battle Of The Bards">
+              <img src="img/portfolio/BattleOfTheBards/BattleOfTheBards.png" class="img-fluid" alt="Battle Of The Bards">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
@@ -154,12 +154,12 @@
               <img src="img/profile.png" class="img-fluid img-profile">
             </div>
               <p>I'm an avid programmer who has had a passion for game development all my life. My colleagues know me to be a quick learner, friendly, organized, open-minded, and inspired.<br><br>
-              Through my personal projects, I have become proficient with Unity and have experimented extensively with VR development. I have also interned for Blizzard Entertainment, where I became experienced with web engineering and WebGL, and was selected to participate in Google’s Applied CS program, where I learned to develop Android applications.<br><br>
-              I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at HackPoly 2017, as well as winning ‘3rd Place Overall’ at BeachHacks 2017.
+              Through my personal projects, I have become proficient with Unity and have experimented extensively with VR development. I have also interned for <strong><a href="https://careers.blizzard.com/en-us/students" class="inline-white">Blizzard Entertainment</a></strong>, where I became experienced with web engineering and WebGL, and was selected to participate in <strong><a href="https://cswithandroid.withgoogle.com/" class="inline-white">Google’s Applied CS program</a></strong>, where I learned to develop Android applications.<br><br>
+              I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at <strong><a href="https://devpost.com/software/battle-of-the-bards" class="inline-white">HackPoly 2017</a></strong>, as well as winning ‘3rd Place Overall’ at <strong><a href="https://devpost.com/software/elemental-showdown" class="inline-white">BeachHacks 2017</a></strong>.
               <br><br>
-              As President of the Game Design &amp; Development Club at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the Student Game Developer Alliance which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.
+              As President of the <strong><a href="http://www.cppgamedev.com/whoweare.html" class="inline-white">Game Design &amp; Development Club</a></strong> at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the <strong><a href="https://sgdasocal.wixsite.com/sgdasocal" class="inline-white">Student Game Developer Alliance</a></strong> which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.
               <br><br>
-              I recently graduated from Cal Poly Pomona with a degree in Computer Science and I am currently pursuing a full-time programming position. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!</p>
+              I recently graduated from <strong><a href="https://catalog.cpp.edu/preview_program.php?catoid=5&poid=1222" class="inline-white">Cal Poly Pomona</a></strong> with a degree in Computer Science and I am currently pursuing a full-time programming position. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!</p>
             </div>
           </div>
         </div>
@@ -268,7 +268,7 @@
                   <h6>About the project</h6>
                     <p>Red Dwarf is a virtual reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with immersive VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying. Our inspirations for the game include old school space-sims such as Freelancer and Elite Dangerous as well as roguelikes such as FTL.</p>
                   <h6>Contributions</h6>
-                    I worked with a team of 4 other engineers and a 3D artist to create Red Dwarf. <br>My contributions include:
+                    I worked with a team of 3 other engineers and a 3D artist to create Red Dwarf. <br>My contributions include:
                     <ul class="center-list">
                         <li>Semi-newtonian physics based ship controls (keyboard and Vive)</li>
                         <li>360 degree gyroscopic radar system</li>
@@ -470,7 +470,7 @@
                   <h6>Contributions</h6>
                     I worked with two others engineers and a 3D artist to create Elemental Fury. <br>My contributions include:
                     <ul class="center-list">
-                        <li>Local networking between multiple HTC Vive's using the Photon Unity Networking Framework</li>
+                        <li>Photon Unity Networking between multiple HTC Vives</li>
                         <li>Player controls for HTC Vive</li>
                         <li>Earth and water mechanics</li>
                     </ul>
@@ -589,8 +589,20 @@
                       </a>
                     </div>
                     <!-- /Carousel -->
-                    <p>InVRasion is a work in progress virtual reality game for the HTC Vive. It is an asynchronous multiplayer game in which a single VR player competes against up to four other players through co-operative splitscreen. The VR player plays as a giant, city destroying monster, while up to 4 other players play as different classes of super soldiers and attempt to defeat the monster before it destroys an objective. 
-                    <br><br>InVRasion was originally developed as my Senior Project for my degree in Computer Science at Cal Poly Pomona. After receiving academic credit for InVRasion, development has continued as a hobby since January of 2017.
+                    
+                  <h6>About the project</h6>
+                  <p>InVRasion is an asynchronous multiplayer game that brings together keyboard/mouse and virtual reality gamers in an epic duel. An HTC Vive player plays as a giant, city destroying alien mech, while up to 4 other players play as different classes of super soldiers who must coordinate their attacks to defeat the alien threat before it destroys an objective. Our inspirations for the game include Pacific Rim and Attack on Titan as well as many of our favorite VR games.
+                  <h6>Contributions</h6>
+                    I worked with another engineers, a designer, and a 3D artist to create inVRasion. <br>My contributions include:
+                    <ul class="center-list">
+                        <li>Wall running and grapple mechanics</li>
+                        <li>Projectile spawning via object pools</li>
+                        <li>Various weapon mechanics</li>
+                        <li>World space UI displays</li>
+                        <li>Keyboard/Mouse player controls</li>
+                    </ul>
+                  <h6>What I Learned</h6>
+                    <p>InVRasion was originally developed as my Senior Project for my Computer Science degree at Cal Poly Pomona. The project was very open ended, allowing me to experience the process of concepting a game, prototyping it, and then turning it into a fully featured project. I organized a team of friends from my game development club to work with me and it was up to us to push the project as far as we could. This project had me delving deeper into design than ever before as my team and I spent many days playtesting our game and several other VR games to make sure all of the abilities we implemented were fun and balanced. I also learned a lot about organizing a team as my friends and I were able to implement a version of Agile development using Trello to coordinate tasks remotely and Github to share code.
                     </p>
                     <ul class="list-inline item-details">    
                     <a href="builds/InVRasion.zip">
